tests/compilefail65.out
[1mtests/compilefail65.pas:7:15: [0m[1m[91merror:[0m Invalid type identifier 'a'
     7 | var b : array[a] of boolean;